--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Video Player</title>
+</head>
+<body>
+    <h2>Simple Video Player</h2>
+    <video width="640" height="360" controls>
+        <source src="https://nachos.bunkr.ru/b154cb2e-493f-436b-aa3e-dae17b2c5f97.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</body>
+</html>
