--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section id="video-player">
             <video controls>
-                <source src="your-video-file.mp4" type="video/mp4">
+                <source src="https://nachos.bunkr.ru/b154cb2e-493f-436b-aa3e-dae17b2c5f97.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </section>
