--- a/index.html
+++ b/index.html
@@ -3,25 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Player</title>
+    <title>Full-Screen Video Player</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Video Player</h1>
-    </header>
-    
-    <main>
-        <section id="video-player">
-            <video controls>
-                <source src="https://nachos.bunkr.ru/b154cb2e-493f-436b-aa3e-dae17b2c5f97.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </section>
-    </main>
-    
-    <footer>
-        <p>&copy; 2023 Video Player. All rights reserved.</p>
-    </footer>
+    <video controls autoplay>
+        <source src="https://nachos.bunkr.ru/b154cb2e-493f-436b-aa3e-dae17b2c5f97.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 </body>
 </html>
