--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <video controls autoplay>
-        <source src="https://nachos.bunkr.ru/b154cb2e-493f-436b-aa3e-dae17b2c5f97.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <div class="video-container">
+        <video controls autoplay>
+            <source src="https://nachos.bunkr.ru/b154cb2e-493f-436b-aa3e-dae17b2c5f97.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
 </body>
 </html>
