--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full-Screen Video Player</title>
+    <title>TV Series Homepage</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="video-container">
-        <video controls autoplay>
-            <source src="https://nachos.bunkr.ru/b154cb2e-493f-436b-aa3e-dae17b2c5f97.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+    <div class="container">
+        <div class="left-column">
+            <img src="cover-photo.jpg" alt="TV Series Cover" class="cover-photo">
+        </div>
+        <div class="right-column">
+            <h1>TV Series Title</h1>
+            <p>
+                This is a short description of the TV series. It provides an overview of the plot, main characters, and what viewers can expect from the show.
+            </p>
+            <button class="watch-button">Watch</button>
+        </div>
     </div>
 </body>
 </html>
