add correct sample image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="left-column">
-            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FKings_County%2C_California&psig=AOvVaw1oL8LyYgdsijLEWmmzc1_U&ust=1743342490193000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCIipzIC3r4wDFQAAAAAdAAAAABAE" alt="TV Series Cover" class="cover-photo">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Kings_County_Courthouse_090407_1.JPG/1280px-Kings_County_Courthouse_090407_1.JPG" alt="TV Series Cover" class="cover-photo">
         </div>
         <div class="right-column">
             <h1>TV Series Title</h1>
