--- a/index.html
+++ b/index.html
@@ -3,21 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TV Series Homepage</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Homepage</title>
 </head>
 <body>
     <div class="container">
-        <div class="left-column">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Kings_County_Courthouse_090407_1.JPG/1280px-Kings_County_Courthouse_090407_1.JPG" alt="TV Series Cover" class="cover-photo">
+        <div class="item">
+            <div class="left-column">
+                <img src="https://m.media-amazon.com/images/M/MV5BYzIyNjc3YTUtN2MwMy00NzcwLTkwMGMtN2I0ODNjYjlkNGNlXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Cover Photo 1">
+            </div>
+            <div class="right-column">
+                <h2>Description 1</h2>
+                <p>This is a brief description for the first cover photo.</p>
+                <button>Learn More</button>
+            </div>
         </div>
-        <div class="right-column">
-            <h1>TV Series Title</h1>
-            <p>
-                This is a short description of the TV series. It provides an overview of the plot, main characters, and what viewers can expect from the show.
-            </p>
-            <button class="watch-button">Watch</button>
+        <div class="item">
+            <div class="left-column">
+                <img src="https://m.media-amazon.com/images/M/MV5BYzIyNjc3YTUtN2MwMy00NzcwLTkwMGMtN2I0ODNjYjlkNGNlXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Cover Photo 2">
+            </div>
+            <div class="right-column">
+                <h2>Description 2</h2>
+                <p>This is a brief description for the second cover photo.</p>
+                <button>Learn More</button>
+            </div>
         </div>
+        <div class="item">
+            <div class="left-column">
+                <img src="https://m.media-amazon.com/images/M/MV5BYzIyNjc3YTUtN2MwMy00NzcwLTkwMGMtN2I0ODNjYjlkNGNlXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Cover Photo 3">
+            </div>
+            <div class="right-column">
+                <h2>Description 3</h2>
+                <p>This is a brief description for the third cover photo.</p>
+                <button>Learn More</button>
+            </div>
+        </div>
+        <!-- Add more items as needed -->
     </div>
 </body>
 </html>
