first drama addition

--- a/index.html
+++ b/index.html
@@ -4,49 +4,90 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Homepage</title>
+    <title>DramaAddict</title>
 </head>
 <body>
     <script>
+        let current_series_name = '';
+        let current_series_json = '';
         fetch('db/series_list.json')
             .then(response => response.json())
-            .then(data => {
-                console.log("data", data);
+            .then(jsonResponse => {
+                const seriesContainer = document.getElementById('seriesContainer');
+                seriesContainer.innerHTML = '';
+
+                jsonResponse.data.forEach(series => {
+                    const div = document.createElement('div');
+                    div.classList.add('item');
+
+                    div.innerHTML = `
+                        <div class="left-column">
+                            <img style="width: 200px; height: 280px;" src="${series.image}" alt="Cover Photo">
+                        </div>
+                        <div class="right-column">
+                            <h2>${series.name}</h2>
+                            <p>${series.description}</p>
+                            <button id="showEpisodeListButton" onclick="loadEpisodeList('${series.name}', '${series.jsonLocation}')">Show Episode List</button>
+                        </div>
+                    `;
+
+                    seriesContainer.appendChild(div);
+                });
             })
             .catch(error => console.error('Error loading JSON:', error));
+
+            function loadEpisodeList(name, jsonPath) {
+                current_series_name = name;
+                current_series_json = jsonPath;
+                fetch(jsonPath)
+                    .then(response => response.json())
+                    .then(dramaEpisodes => {
+                        const seriesContainer = document.getElementById('seriesContainer');
+                        seriesContainer.innerHTML = '';
+
+                        dramaEpisodes.data.forEach(episode => {
+                            const div = document.createElement('div');
+                            div.classList.add('episode-item');
+
+                            div.innerHTML = `
+                                <h4>${name} - Part ${episode.part}</h4>
+                                <button id="watchButton" onclick="loadWatchContent('${episode.part}', '${episode.video}')">Watch</button>
+                            `;
+
+                            seriesContainer.appendChild(div);
+                        });
+                        const footerDiv = document.createElement('div');
+                        footerDiv.classList.add('episode-list-footer');
+                        footerDiv.innerHTML = `
+                            <button onclick="location.reload()">Back to home</button>
+                        `;
+                        seriesContainer.appendChild(footerDiv);
+                    })
+                    .catch(error => console.error('Error loading JSON:', error));
+            }
+            
+            function loadWatchContent(part, videoSrc) {
+                const seriesContainer = document.getElementById('seriesContainer');
+                seriesContainer.innerHTML = '';
+                const div = document.createElement('div');
+                div.classList.add('video-container');
+
+                div.innerHTML = `
+                    <h3 class="player-title">My Sassy Girl - Part ${part}</h3>
+                    <video controls>
+                        <source src=${videoSrc} type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <div class="player-footer">
+                        <button id="backToListButton" class="player-footer-button" onclick="loadEpisodeList('${current_series_name}', '${current_series_json}')">
+                            Back to list
+                        </button>
+                    </div>
+                `;
+
+                seriesContainer.appendChild(div);
+            }
     </script>
-    <div class="container">
-        <div class="item">
-            <div class="left-column">
-                <img src="https://m.media-amazon.com/images/M/MV5BYzIyNjc3YTUtN2MwMy00NzcwLTkwMGMtN2I0ODNjYjlkNGNlXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Cover Photo 1">
-            </div>
-            <div class="right-column">
-                <h2>Description 1</h2>
-                <p>This is a brief description for the first cover photo.</p>
-                <button>Learn More</button>
-            </div>
-        </div>
-        <div class="item">
-            <div class="left-column">
-                <img src="https://m.media-amazon.com/images/M/MV5BYzIyNjc3YTUtN2MwMy00NzcwLTkwMGMtN2I0ODNjYjlkNGNlXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Cover Photo 2">
-            </div>
-            <div class="right-column">
-                <h2>Description 2</h2>
-                <p>This is a brief description for the second cover photo.</p>
-                <button>Learn More</button>
-            </div>
-        </div>
-        <div class="item">
-            <div class="left-column">
-                <img src="https://m.media-amazon.com/images/M/MV5BYzIyNjc3YTUtN2MwMy00NzcwLTkwMGMtN2I0ODNjYjlkNGNlXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Cover Photo 3">
-            </div>
-            <div class="right-column">
-                <h2>Description 3</h2>
-                <p>This is a brief description for the third cover photo.</p>
-                <button>Learn More</button>
-            </div>
-        </div>
-        <!-- Add more items as needed -->
-    </div>
+    <div class="container" id="seriesContainer">Loading...</div>
 </body>
 </html>
