--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
         script.src = `script.js?v=${timestamp}`;
         document.body.appendChild(script);
     </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YZWD2G25F4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-YZWD2G25F4');
+    </script>
     <div class="container" id="seriesContainer">Loading...</div>
 </body>
 </html>
