theme update and tale of nokdu update

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     
       gtag('config', 'G-YZWD2G25F4');
     </script>
+    <h1 class="drama-addict-title">Drama Addict</h1>
     <div class="container" id="seriesContainer">Loading...</div>
 </body>
 </html>
