--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
       gtag('config', 'G-YZWD2G25F4');
     </script>
     <h1 class="drama-addict-title">Drama Addict</h1>
-    <div class="container" id="seriesContainer">Loading...</div>
+    <div class="container" id="seriesContainer"><div class="loading-text">Loading...</div></div>
 </body>
 </html>
