fix id issue in page title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title id="pageTitle">DramaAddict | Catalogue</title>
+    <title>DramaAddict</title>
 </head>
 <body>
     <script>
@@ -21,7 +21,7 @@
     
       gtag('config', 'G-YZWD2G25F4');
     </script>
-    <h1 class="drama-addict-title">Drama Addict</h1>
+    <h1 class="drama-addict-title" id="pageTitle">Drama Addict | Catalogue</h1>
     <div class="container" id="seriesContainer"><div class="loading-text">Loading...</div></div>
 </body>
 </html>
