--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
       gtag('config', 'G-YZWD2G25F4');
     </script>
-    <h1 class="drama-addict-title" id="pageTitle">Drama Addict | Catalogue</h1>
+    <h1 class="drama-addict-title" id="pageHeader">Drama Addict | Catalogue</h1>
     <div class="container" id="seriesContainer"><div class="loading-text">Loading...</div></div>
 </body>
 </html>
